<resources>
    <string name="app_name">HealthCare</string>
    <string name="action_settings">Settings</string>
    <string name="lblSeleccionado">Especialista Seleccionado:</string>
    <string name="lblNombre">Nombre:</string>
    <string name="lblTelefono">Teléfono:</string>
    <string name="lblEspecialidad">Especialidad:</string>
    <string name="menuAcercaDe">Acerca de...</string>
    <string name="menuContextVerDetalles">Ver detalles</string>
    <string name="menuContextEliminarEspecialista">Eliminar...</string>
    <string name="lblApellidos">Apellidos:</string>
    <string name="lblEmail">eMail:</string>
    <string name="lblConsulta">Consulta:</string>
    <string name="lblEdificio">Edificio:</string>
    <string name="lblOperar">Capacidad para operar:</string>
    <string name="menuRecargar">Recargar</string>
    <string name="title_activity_login">Identificación</string>
    <string name="menuAniadir">Añadir</string>

    <string-array name="array_sexo">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lblSexo">Sexo:</string>
    <string name="lblDni">DNI:</string>
</resources>
