<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.ipo2.healthcare.DetallesEspecialista">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblNombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/lblApellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblApellidos" />

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/lblTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTelefono" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEmail" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/lblEspecialidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEspecialidad" />

        <EditText
            android:id="@+id/txtEspecialidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/lblConsulta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblConsulta" />

        <EditText
            android:id="@+id/txtConsulta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/lblEdificio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEdificio" />

        <EditText
            android:id="@+id/txtEdificio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/lblOperar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lblOperar"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/checkOperar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:enabled="false"
            android:text="CheckBox" />

    </TableRow>

</TableLayout>
