<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageEspecialista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="50dp"
        android:minWidth="50dp"
        app:srcCompat="@drawable/doctora" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:text="@string/lblNombre"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblApellidos" />

        <TextView
            android:id="@+id/lblEspecialidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.13"
            android:text="@string/lblEspecialidad" />
    </LinearLayout>

</LinearLayout>